--- a/config.json
+++ b/config.json
@@ -1,1 +1,9 @@
-
+{
+   "openweatherlocation":"zip=23569,de",
+   "openweatherapikey":"",
+   "place":
+   {
+	   "e5:62:73":"Wohnzimmer",
+	   "7c:dd:8e":"Dachgeschoß"
+   }
+}
