--- a/config.json.example
+++ b/config.json.example
@@ -2,25 +2,31 @@
    "htmloutput":{
       "file":"/var/www/html/weather.html",
       "string_tolesshumi":"An diesem Ort ist die Luftfeuchtigkeit zu niedrig",
-      "string_tolesshumi_open":", da die abs. Feuchte drau&szlig;sen h&ouml;her ist, sollte zum ausgleich gel&uuml;ftet werden. <i class=\"fas fa-door-open\"></i>",
-      "string_tolesshumi_close":", da die abs. Feuchte drau&szlig;sen niedriger ist, sollte nicht gel&uuml;ftet werden um die Luftfeuchtigkeit m&ouml;glichst zu erhalten. <i class=\"fas fa-door-closed\"></i>",
+      "string_tolesshumi_open":", da die abs. Feuchte drau&szlig;en h&ouml;her ist, sollte zum ausgleich gel&uuml;ftet werden. <i class=\"fas fa-door-open\"></i>",
+      "string_tolesshumi_close":", da die abs. Feuchte drau&szlig;en niedriger ist, sollte nicht gel&uuml;ftet werden um die Luftfeuchtigkeit m&ouml;glichst zu erhalten. <i class=\"fas fa-door-closed\"></i>",
       "string_tomuchhumi":"An diesem Ort ist die Luftfeuchtigkeit zu hoch",
-      "string_tomuchhumi_open":", da die abs. Feuchte drau&szlig;sen niedriger ist, sollte zum ausgleich gel&uuml;ftet werden. <i class=\"fas fa-door-open\"></i>",
-      "string_tomuchhumi_close":", da die abs. Feuchte drau&szlig;sen h&ouml;her ist, sollte nicht gel&uuml;ftet werden um die Luftfeuchtigkeit m&ouml;glichst zu erhalten. <i class=\"fas fa-door-closed\"></i>",
-      "string_righthumi":"An diesem Ort ist die Luftfeuchtigkeit passend. <i class=\"far fa-thumbs-up\"></i>"
+      "string_tomuchhumi_open":", da die abs. Feuchte drau&szlig;en niedriger ist, sollte zum ausgleich gel&uuml;ftet werden. <i class=\"fas fa-door-open\"></i>",
+      "string_tomuchhumi_close":", da die abs. Feuchte drau&szlig;en h&ouml;her ist, sollte nicht gel&uuml;ftet werden um die Luftfeuchtigkeit m&ouml;glichst zu erhalten. <i class=\"fas fa-door-closed\"></i>",
+      "string_righthumi":"An diesem Ort ist die Luftfeuchtigkeit passend. <i class=\"far fa-thumbs-up\"></i>",
+      "string_nowindow":"Keine M&ouml;glichkeit zum L&uuml;ften. <i class=\"far fa-surprise\"></i>",
+	  "string_outside_measuring_range":"<br /><i class=\"fas fa-exclamation-triangle\" style=\"color:red\"></i>au&szlig;erhalb des Messbereiches"
    },
-   "openweatherlocation":"zip=23569,de",
-   "openweatherapikey":"",
-   "place":{
+   "openweather":{
+      "location":"zip=22399,de",
+      "apikey":"",
+      "maxageinminutes":30
+   },
+   "pushover":{
+      "notification":"on",
+      "apikey":"",
+      "userkey":"",
+      "maxageinminutes":30
+   },
+   "device":{
       "e5:62:73":{
-         "label":"Room 1",
-         "options":"nw;",
-		 "sensor":"dht11"
-      },
-      "7c:dd:8e":{
-         "label":"Room 2",
+         "label":"Wohnzimmer",
          "options":"",
-		 "sensor":"dht22"
+         "sensor":"dht11"
       }
    }
 }
