add option i; to ignore mac adresses
add option i; to ignore mac adresses

--- a/config.json.example
+++ b/config.json.example
@@ -27,6 +27,16 @@
          "label":"Wohnzimmer",
          "options":"",
          "sensor":"dht11"
+      },
+      "ab:ff:22":{
+         "label":"Wohnzimmer",
+         "options":"i;",
+         "sensor":"dht11"
+      },
+      "45:72:a3":{
+         "label":"Wohnzimmer",
+         "options":"nw;",
+         "sensor":"dht22"
       }
    }
 }
